[KARAF-413] Tab completion on path when installing bundles
The maven completion isn’t perfect.  It’s quite difficult to know all the groupIds in advance, unless we completely scan the local repo which can be very time consuming.