@@ -17,7 +17,7 @@
 package org.apache.karaf.bundle.command;
 
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 
 import org.apache.karaf.shell.api.action.Argument;
 import org.apache.karaf.shell.api.action.Command;
@@ -29,12 +29,12 @@ import org.osgi.framework.Bundle;
 public class Update extends BundleCommand {
 
     @Argument(index = 1, name = "location", description = "The bundles update location", required = false, multiValued = false)
-    String location;
+    URI location;
 
     protected Object doExecute(Bundle bundle) throws Exception {
         if (location != null) {
             try (
-                InputStream is = new URL(location).openStream()
+                InputStream is = location.toURL().openStream()
             ) {
                 bundle.update(is);
             }
